# contract-shield-ai

./: ARCHITECTURE.md  Makefile  README.md
contract-shield-agentic-be/: README.md  main.py  pyproject.toml  testing-agent.md
contract-shield-agentic-be/src/: agent_config.py  network_trust.py  prompt_builder.py  risk_assessment_agent.py  rule_engine.py
contract-shield-agentic-be/src/contract_shield_agentic_be.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
contract-shield-ingestion/: README.md  pyproject.toml
contract-shield-ingestion/src/: audit_logger.py  bigquery_loader.py  bigquery_schema.sql  clause_normalizer.py  config.py  document_processor.py  file_scanner.py  ingest_contracts.py  main.py  seed_rules.py
contract-shield-ingestion/src/contract_shield_ingestion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
contract_input_pack/: risk_rules.yaml
scripts/: schema_setup.ps1
table-results/: 0-risk_rules.csv  1-contracts.csv  2-contract_clauses.csv  3-risk_assessments-copy.csv  3-risk_assessments.csv  4-processing_audit.csv  all-together.xlsx
