[project]
name = "contract-shield-agentic-be"
version = "0.1.0"
description = "ADK Agent backend for Enterprise Contract Risk Assessment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-bigquery>=3.25.0",
    "google-generativeai>=0.3.0",
    "google-api-core>=2.10.0",
    "google-auth>=2.20.0",
    "python-dotenv>=1.0.0",
    "truststore>=0.10.1",
    "google-cloud-aiplatform>=1.75.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
