[project]
name = "contract-shield-ingestion"
version = "0.1.0"
description = "Contract ingestion pipeline for Enterprise Risk Assessment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-storage>=2.17.0",
    "google-cloud-documentai>=2.28.0",
    "google-cloud-bigquery>=3.25.0",
    "google-api-core>=2.10.0",
    "PyYAML>=6.0.2",
    "python-dotenv>=1.0.0",
    "truststore>=0.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

